Fixed dark mode UI bug

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -147,20 +147,6 @@ button {
   padding: 0
 }
 
-button > div {
-  height: 100%;
-  width: 100%;
-  border-radius: 12px;
-  color: var(--thunder);
-  border: var(--thunder) 1px solid;
-  background-color: var(--dull);
-  font-size: .9rem;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center
-}
-
 .button-settings-btn {
   background: none;
   border: none;
